@@ -1,3 +1,10 @@
+2008-10-14  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclExecute.c:	Fix compile warnings when --enable-symbols=all.
+
+	* generic/tclCmdIL.c:	Fix write to unallocated memory whenever
+	[lrepeat] returns an empty list.
+
 2008-10-14  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/chan.n, doc/fconfigure.n: Added even more emphatic text to
